--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "echarts": "^5.3.3",
+    "mockjs": "^1.1.0",
     "pinia": "^2.0.16",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
@@ -45,6 +47,7 @@
     "unplugin-vue-components": "^0.21.1",
     "vfonts": "^0.1.0",
     "vite": "^3.0.1",
+    "vite-plugin-mock": "^2.9.6",
     "vitest": "^0.18.1",
     "vue": "^3.2.37",
     "vue-tsc": "^0.38.8"
