--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "animate.css": "3",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "echarts": "^5.3.3",
+    "events": "^3.3.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "pako": "^2.0.4",
     "pinia": "^2.0.16",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
@@ -27,6 +30,7 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.45",
+    "@types/pako": "^2.0.0",
     "@vicons/fluent": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/utils": "^0.1.4",
