--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "unplugin-vue-components": "^0.21.1",
     "vfonts": "^0.1.0",
     "vite": "^3.0.1",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
     "vitest": "^0.18.1",
     "vue": "^3.2.37",
